# Debian-minimal

./: .Xresources2  .bash_aliases2  .bash_profile2  .bashrc2  .conkyrc  .gitconfig2  .gitignore  .inputrc2  .laeqed.sh  .languagetool.cfg  .languagetool.sh  .profile2  .zshrc2  00_debian-fresh-install.txt  01_debian_essential.sh  02_debian_minimal_packages.md  02_debian_minimal_packages.sh  ARM-GCC_DR-MEMORY_EXPORT-PATH.txt  CMake-latest-install.txt  ClamScanExclusionList.txt  FHD_through_HDMI_converter.md  GLAD-install-note.txt  LICENSE  Math-Formula-LaTeX-OCR.txt  README.md  anki-24.04.1-linux-qt6.txt  converting-html-markdown-using-pandoc.md  crontab.txt  defrag-ext4.md  defrag-ntfs-volumes-shake.md  jellyfin.txt  ntp-time-update.txt  ollama-libreoffice-guide.md  packages_list.txt  redshift-configuration.txt  script.c  surf-browser-build-latest.md  tails-os-complete-guide.md
.goldendict/: NOTE.TXT  config
.themes/: NOTE.txt
BlockHOSTS/: CMakeLists.txt  Personal (GitHub version).txt  Personal-hosts-blocklist.txt  hosts-Win10-default.txt  hosts.backup.txt  hosts_config.txt  hosts_manager.c  instructions.txt  tags  tagspath.txt
BlockHOSTS/db_from_github/: completeaction-wo-social.BAT  completeaction.BAT  hosts2block-unified-hosts-malware-only.BAT  hosts2block-unified-hosts-malware-only.sh  hosts2block-wo-social-wo-porn.sh  hosts2block-wo-social.sh  hosts2block.sh
BlockHOSTS_MS_Win/: Personal (GitHub version).txt
Browser Settings/: Bookmark Bar.txt  CAD_Expressions_2022-11-30_10.00.18.json  Check.html  Chrome Extensions.txt  Firefox Extensions.txt  Search.html  VPN_IP.html  my-ublock-trusted-sites_2021-09-15_18.15.14.txt  userdata_cookie_quick_manager.json
DVTM/: DVTM.html  DVTM.md
Debian_common_knowledge/: 7-zip-extract.txt  Accounting-and-ERP-Programs.TXT  Alternative-Software-Search.txt  Bitwarden.txt  Linux_important_knowledge+links.txt  Recent-Thunar.txt  Thunar File Manager Context Menu.txt  Waiting for cache lock-Could not get lock.txt  Xfce suddenly looses all my cusomizations in the whisker menu.md  XubuntuXFCESettings.txt  airfoil-n-boat-hull-design-programs.txt  cpu-detection-linux.md  free-disk-space.txt  icons-n-themes.txt  imagemagick-images-to-pdf.txt  markdown-to-raw-text.txt  multisession-dvds.txt  pdf--delete-remove-pages-from-a-pdf-file.txt  pdf-combine.txt  pdf-compression.txt  pdf-from-images-imagemagick.txt  pdf-insert-pages.txt  pdf-to-jpg.txt  (+6 more)
(+703 files in other folders)
